[package]
name = "bitly-urlshortener"
version = "0.1.1"
authors = ["Laszlo Szathmary, alias Jabba Laci <jabba.laci@gmail.com>"]
edition = "2021"
description = "A URL shortener command-line app. using bit.ly API v4."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jabbalaci/UrlShortener-rs"
keywords = ["bitly", "shortener", "urlshortener", "url"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
jabba-lib = "0.1.8"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde_json = "1.0.83"

# See https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[[bin]]
bench = false
path = "src/main.rs"
name = "urlshortener"
